# py2md

./: README.md  pyproject.toml
py2md/: main.py  main_temp.py
tests/: test_main.py
